Added GetEmployee and Delete Employee apis
