# account-svc/pkg/proto/api.pb.go
@@ -156,6 +156,124 @@ func (m *Employee) GetRole() string {
 	return ""
 }
 
+// empty
+type EmptyMessage struct {
+	XXX_NoUnkeyedLiteral struct{} `json:"-"`
+	XXX_unrecognized     []byte   `json:"-"`
+	XXX_sizecache        int32    `json:"-"`
+}
+
+func (m *EmptyMessage) Reset()         { *m = EmptyMessage{} }
+func (m *EmptyMessage) String() string { return proto.CompactTextString(m) }
+func (*EmptyMessage) ProtoMessage()    {}
+func (*EmptyMessage) Descriptor() ([]byte, []int) {
+	return fileDescriptor_00212fb1f9d3bf1c, []int{2}
+}
+
+func (m *EmptyMessage) XXX_Unmarshal(b []byte) error {
+	return xxx_messageInfo_EmptyMessage.Unmarshal(m, b)
+}
+func (m *EmptyMessage) XXX_Marshal(b []byte, deterministic bool) ([]byte, error) {
+	return xxx_messageInfo_EmptyMessage.Marshal(b, m, deterministic)
+}
+func (m *EmptyMessage) XXX_Merge(src proto.Message) {
+	xxx_messageInfo_EmptyMessage.Merge(m, src)
+}
+func (m *EmptyMessage) XXX_Size() int {
+	return xxx_messageInfo_EmptyMessage.Size(m)
+}
+func (m *EmptyMessage) XXX_DiscardUnknown() {
+	xxx_messageInfo_EmptyMessage.DiscardUnknown(m)
+}
+
+var xxx_messageInfo_EmptyMessage proto.InternalMessageInfo
+
+type EmployeeIdRequest struct {
+	Id                   string   `protobuf:"bytes,1,opt,name=id,proto3" json:"id,omitempty"`
+	XXX_NoUnkeyedLiteral struct{} `json:"-"`
+	XXX_unrecognized     []byte   `json:"-"`
+	XXX_sizecache        int32    `json:"-"`
+}
+
+func (m *EmployeeIdRequest) Reset()         { *m = EmployeeIdRequest{} }
+func (m *EmployeeIdRequest) String() string { return proto.CompactTextString(m) }
+func (*EmployeeIdRequest) ProtoMessage()    {}
+func (*EmployeeIdRequest) Descriptor() ([]byte, []int) {
+	return fileDescriptor_00212fb1f9d3bf1c, []int{3}
+}
+
+func (m *EmployeeIdRequest) XXX_Unmarshal(b []byte) error {
+	return xxx_messageInfo_EmployeeIdRequest.Unmarshal(m, b)
+}
+func (m *EmployeeIdRequest) XXX_Marshal(b []byte, deterministic bool) ([]byte, error) {
+	return xxx_messageInfo_EmployeeIdRequest.Marshal(b, m, deterministic)
+}
+func (m *EmployeeIdRequest) XXX_Merge(src proto.Message) {
+	xxx_messageInfo_EmployeeIdRequest.Merge(m, src)
+}
+func (m *EmployeeIdRequest) XXX_Size() int {
+	return xxx_messageInfo_EmployeeIdRequest.Size(m)
+}
+func (m *EmployeeIdRequest) XXX_DiscardUnknown() {
+	xxx_messageInfo_EmployeeIdRequest.DiscardUnknown(m)
+}
+
+var xxx_messageInfo_EmployeeIdRequest proto.InternalMessageInfo
+
+func (m *EmployeeIdRequest) GetId() string {
+	if m != nil {
+		return m.Id
+	}
+	return ""
+}
+
+type GetEmployeeRequest struct {
+	Id                   string   `protobuf:"bytes,1,opt,name=id,proto3" json:"id,omitempty"`
+	Email                string   `protobuf:"bytes,2,opt,name=email,proto3" json:"email,omitempty"`
+	XXX_NoUnkeyedLiteral struct{} `json:"-"`
+	XXX_unrecognized     []byte   `json:"-"`
+	XXX_sizecache        int32    `json:"-"`
+}
+
+func (m *GetEmployeeRequest) Reset()         { *m = GetEmployeeRequest{} }
+func (m *GetEmployeeRequest) String() string { return proto.CompactTextString(m) }
+func (*GetEmployeeRequest) ProtoMessage()    {}
+func (*GetEmployeeRequest) Descriptor() ([]byte, []int) {
+	return fileDescriptor_00212fb1f9d3bf1c, []int{4}
+}
+
+func (m *GetEmployeeRequest) XXX_Unmarshal(b []byte) error {
+	return xxx_messageInfo_GetEmployeeRequest.Unmarshal(m, b)
+}
+func (m *GetEmployeeRequest) XXX_Marshal(b []byte, deterministic bool) ([]byte, error) {
+	return xxx_messageInfo_GetEmployeeRequest.Marshal(b, m, deterministic)
+}
+func (m *GetEmployeeRequest) XXX_Merge(src proto.Message) {
+	xxx_messageInfo_GetEmployeeRequest.Merge(m, src)
+}
+func (m *GetEmployeeRequest) XXX_Size() int {
+	return xxx_messageInfo_GetEmployeeRequest.Size(m)
+}
+func (m *GetEmployeeRequest) XXX_DiscardUnknown() {
+	xxx_messageInfo_GetEmployeeRequest.DiscardUnknown(m)
+}
+
+var xxx_messageInfo_GetEmployeeRequest proto.InternalMessageInfo
+
+func (m *GetEmployeeRequest) GetId() string {
+	if m != nil {
+		return m.Id
+	}
+	return ""
+}
+
+func (m *GetEmployeeRequest) GetEmail() string {
+	if m != nil {
+		return m.Email
+	}
+	return ""
+}
+
 type PingMessage struct {
 	Greeting             string   `protobuf:"bytes,1,opt,name=greeting,proto3" json:"greeting,omitempty"`
 	XXX_NoUnkeyedLiteral struct{} `json:"-"`
@@ -167,7 +285,7 @@ func (m *PingMessage) Reset()         { *m = PingMessage{} }
 func (m *PingMessage) String() string { return proto.CompactTextString(m) }
 func (*PingMessage) ProtoMessage()    {}
 func (*PingMessage) Descriptor() ([]byte, []int) {
-	return fileDescriptor_00212fb1f9d3bf1c, []int{2}
+	return fileDescriptor_00212fb1f9d3bf1c, []int{5}
 }
 
 func (m *PingMessage) XXX_Unmarshal(b []byte) error {
@@ -198,6 +316,9 @@ func (m *PingMessage) GetGreeting() string {
 func init() {
 	proto.RegisterType((*CreateEmployeeRequest)(nil), "proto.CreateEmployeeRequest")
 	proto.RegisterType((*Employee)(nil), "proto.Employee")
+	proto.RegisterType((*EmptyMessage)(nil), "proto.EmptyMessage")
+	proto.RegisterType((*EmployeeIdRequest)(nil), "proto.EmployeeIdRequest")
+	proto.RegisterType((*GetEmployeeRequest)(nil), "proto.GetEmployeeRequest")
 	proto.RegisterType((*PingMessage)(nil), "proto.PingMessage")
 }
 
@@ -206,28 +327,33 @@ func init() {
 }
 
 var fileDescriptor_00212fb1f9d3bf1c = []byte{
-	// 329 bytes of a gzipped FileDescriptorProto
-	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x8c, 0x91, 0xcf, 0x4a, 0xc3, 0x40,
-	0x10, 0xc6, 0x4d, 0x6c, 0x25, 0x1d, 0xb5, 0xe2, 0xa8, 0x18, 0x62, 0x0f, 0x92, 0x93, 0xf6, 0xd0,
-	0xe0, 0x9f, 0x53, 0x6f, 0x2a, 0x82, 0x1e, 0x14, 0x69, 0xaf, 0x82, 0x8c, 0xed, 0xb8, 0x2c, 0x6e,
-	0x76, 0x63, 0xb2, 0x6d, 0xa9, 0x47, 0x5f, 0xc1, 0x47, 0xf3, 0x15, 0xbc, 0xfb, 0x0a, 0xd2, 0x24,
-	0xad, 0x15, 0x2a, 0x78, 0x4a, 0xe6, 0x9b, 0xf9, 0xbe, 0xdf, 0x32, 0x03, 0x35, 0x4a, 0x64, 0x2b,
-	0x49, 0x8d, 0x35, 0x58, 0xcd, 0x3f, 0x41, 0x43, 0x18, 0x23, 0x14, 0x47, 0x94, 0xc8, 0x88, 0xb4,
-	0x36, 0x96, 0xac, 0x34, 0x3a, 0x2b, 0x86, 0xc2, 0x57, 0xd8, 0xb9, 0x48, 0x99, 0x2c, 0x5f, 0xc6,
-	0x89, 0x32, 0x63, 0xe6, 0x0e, 0xbf, 0x0c, 0x38, 0xb3, 0xb8, 0x0d, 0x55, 0x8e, 0x49, 0x2a, 0xdf,
-	0xd9, 0x77, 0x0e, 0x6a, 0x9d, 0xa2, 0xc0, 0x00, 0xbc, 0x84, 0xb2, 0x6c, 0x64, 0xd2, 0xbe, 0xef,
-	0xe6, 0x8d, 0x59, 0x8d, 0x7b, 0x50, 0x7b, 0x1a, 0x28, 0xf5, 0xa0, 0x29, 0x66, 0x7f, 0xb9, 0x68,
-	0x4e, 0x84, 0x5b, 0x8a, 0x19, 0x11, 0x2a, 0xa9, 0x51, 0xec, 0x57, 0x72, 0x3d, 0xff, 0x0f, 0x09,
-	0xbc, 0x29, 0x15, 0xeb, 0xe0, 0xca, 0x7e, 0xc9, 0x72, 0x65, 0xff, 0x07, 0xef, 0xce, 0xe3, 0x7f,
-	0x21, 0x2a, 0x7f, 0x20, 0xaa, 0x73, 0x88, 0x43, 0x58, 0xbd, 0x93, 0x5a, 0xdc, 0x70, 0x96, 0x91,
-	0xe0, 0xc9, 0xf3, 0x45, 0xca, 0x6c, 0xa5, 0x16, 0x25, 0x6b, 0x56, 0x1f, 0x7f, 0x39, 0x50, 0x3f,
-	0xeb, 0xf5, 0xcc, 0x40, 0xdb, 0x2e, 0xa7, 0x43, 0xd9, 0x63, 0x3c, 0x05, 0xaf, 0x4b, 0xe3, 0x2b,
-	0x56, 0xca, 0x20, 0x16, 0x0b, 0x6b, 0xcd, 0xc5, 0x05, 0x0b, 0xb4, 0x70, 0x09, 0xaf, 0x01, 0xa6,
-	0x2e, 0x31, 0xfa, 0xb7, 0x6f, 0xeb, 0xed, 0xe3, 0xf3, 0xdd, 0x5d, 0x0f, 0xbd, 0x68, 0x78, 0x14,
-	0x25, 0x52, 0x8b, 0xb6, 0xd3, 0xc4, 0x7b, 0xc0, 0xe2, 0x3a, 0xe7, 0xa4, 0x9f, 0x67, 0xbb, 0x6a,
-	0x94, 0xf6, 0x85, 0x87, 0x0b, 0x36, 0xca, 0xee, 0x54, 0x0f, 0x77, 0xf3, 0xe4, 0xcd, 0x70, 0x6d,
-	0x92, 0xcc, 0xa5, 0xda, 0x76, 0x9a, 0x8f, 0x2b, 0xf9, 0xe0, 0xc9, 0x77, 0x00, 0x00, 0x00, 0xff,
-	0xff, 0xac, 0x1a, 0x52, 0xf1, 0x34, 0x02, 0x00, 0x00,
+	// 416 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x8c, 0x92, 0xcb, 0x6e, 0xd3, 0x40,
+	0x14, 0x86, 0x89, 0x9b, 0x20, 0xe7, 0xb4, 0x18, 0xe5, 0xa4, 0x08, 0xd7, 0x74, 0x81, 0x86, 0x0d,
+	0x74, 0x51, 0x8b, 0xcb, 0xaa, 0x3b, 0x2e, 0x15, 0x74, 0xc1, 0x45, 0xed, 0x0e, 0x21, 0xa1, 0x21,
+	0x3e, 0x8c, 0x46, 0x8c, 0x67, 0x8c, 0x3d, 0x69, 0x15, 0x10, 0x1b, 0x5e, 0x81, 0x2d, 0x6f, 0xc5,
+	0x2b, 0xf0, 0x20, 0xc8, 0xe3, 0x6b, 0x2e, 0x48, 0x59, 0x25, 0xe7, 0x9c, 0xf9, 0xff, 0xef, 0x78,
+	0xfe, 0x81, 0x31, 0xcf, 0xe4, 0x71, 0x96, 0x1b, 0x6b, 0x70, 0xe4, 0x7e, 0xa2, 0x43, 0x61, 0x8c,
+	0x50, 0x14, 0xf3, 0x4c, 0xc6, 0x5c, 0x6b, 0x63, 0xb9, 0x95, 0x46, 0x17, 0xd5, 0x21, 0xf6, 0x0d,
+	0x6e, 0x3d, 0xcf, 0x89, 0x5b, 0x3a, 0x4d, 0x33, 0x65, 0x16, 0x44, 0xe7, 0xf4, 0x75, 0x4e, 0x85,
+	0xc5, 0x7d, 0x18, 0x51, 0xca, 0xa5, 0x0a, 0x07, 0x77, 0x07, 0xf7, 0xc7, 0xe7, 0x55, 0x81, 0x11,
+	0xf8, 0x19, 0x2f, 0x8a, 0x2b, 0x93, 0x27, 0xa1, 0xe7, 0x06, 0x6d, 0x8d, 0x77, 0x60, 0xfc, 0x79,
+	0xae, 0xd4, 0x47, 0xcd, 0x53, 0x0a, 0x77, 0xaa, 0x61, 0xd9, 0x78, 0xc3, 0x53, 0x42, 0x84, 0x61,
+	0x6e, 0x14, 0x85, 0x43, 0xd7, 0x77, 0xff, 0x19, 0x07, 0xbf, 0xa1, 0x62, 0x00, 0x9e, 0x4c, 0x6a,
+	0x96, 0x27, 0x93, 0x0e, 0xef, 0xf5, 0xf1, 0x4b, 0x88, 0xe1, 0x7f, 0x10, 0xa3, 0x1e, 0x22, 0x80,
+	0xbd, 0xd3, 0x34, 0xb3, 0x8b, 0xd7, 0x54, 0x14, 0x5c, 0x10, 0xbb, 0x07, 0x93, 0x06, 0x79, 0x96,
+	0x34, 0x9f, 0xba, 0xc2, 0x66, 0x27, 0x80, 0x2f, 0xc9, 0xae, 0x5e, 0xc8, 0x56, 0x1b, 0xb2, 0x07,
+	0xb0, 0xfb, 0x4e, 0x6a, 0x51, 0xf3, 0xca, 0xfb, 0x12, 0x39, 0x91, 0x95, 0x5a, 0xd4, 0xd2, 0xb6,
+	0x7e, 0xf4, 0x7b, 0x07, 0x82, 0xa7, 0xb3, 0x99, 0x99, 0x6b, 0x7b, 0x41, 0xf9, 0xa5, 0x9c, 0x11,
+	0x3e, 0x01, 0xff, 0x82, 0x2f, 0x5e, 0x91, 0x52, 0x06, 0xb1, 0x4a, 0xe8, 0xb8, 0x67, 0x17, 0x6d,
+	0xe8, 0xb1, 0x6b, 0x78, 0x06, 0xd0, 0xa8, 0xc4, 0xd5, 0xd6, 0xba, 0xe9, 0xcf, 0x3f, 0x7f, 0x7f,
+	0x79, 0x37, 0x98, 0x1f, 0x5f, 0x3e, 0x8c, 0x33, 0xa9, 0xc5, 0xc9, 0xe0, 0x08, 0x3f, 0x00, 0x56,
+	0xcf, 0xe1, 0x19, 0xd7, 0x5f, 0xda, 0x70, 0x0e, 0x6b, 0xf9, 0xc6, 0x97, 0x12, 0xdd, 0xac, 0xa7,
+	0x4d, 0x9f, 0xdd, 0x76, 0xce, 0x13, 0xb6, 0x57, 0x3a, 0x53, 0xdd, 0x2d, 0xdd, 0xdf, 0x43, 0xf0,
+	0x82, 0x14, 0x75, 0x16, 0x18, 0xae, 0x68, 0xdb, 0x50, 0xa2, 0x69, 0x37, 0xe9, 0xe2, 0x3b, 0x70,
+	0xce, 0xd3, 0xa3, 0x49, 0xdf, 0x39, 0xfe, 0x2e, 0x93, 0x1f, 0xf8, 0x16, 0x76, 0x7b, 0xa1, 0xe1,
+	0x41, 0x2d, 0x5f, 0x0f, 0x72, 0x7d, 0xdf, 0x7d, 0xe7, 0x1a, 0xe0, 0xd2, 0xbe, 0x9f, 0xae, 0xbb,
+	0x53, 0x8f, 0xff, 0x05, 0x00, 0x00, 0xff, 0xff, 0x9b, 0xe0, 0xed, 0x5d, 0x52, 0x03, 0x00, 0x00,
 }
 
 // Reference imports to suppress errors if they are not otherwise used.
@@ -245,6 +371,8 @@ type AccountServiceClient interface {
 	SayHello(ctx context.Context, in *PingMessage, opts ...grpc.CallOption) (*PingMessage, error)
 	SayHellogw(ctx context.Context, in *PingMessage, opts ...grpc.CallOption) (*PingMessage, error)
 	CreateBankEmployee(ctx context.Context, in *CreateEmployeeRequest, opts ...grpc.CallOption) (*Employee, error)
+	DeleteEmployee(ctx context.Context, in *EmployeeIdRequest, opts ...grpc.CallOption) (*EmptyMessage, error)
+	GetEmployee(ctx context.Context, in *GetEmployeeRequest, opts ...grpc.CallOption) (*Employee, error)
 }
 
 type accountServiceClient struct {
@@ -282,11 +410,31 @@ func (c *accountServiceClient) CreateBankEmployee(ctx context.Context, in *Creat
 	return out, nil
 }
 
+func (c *accountServiceClient) DeleteEmployee(ctx context.Context, in *EmployeeIdRequest, opts ...grpc.CallOption) (*EmptyMessage, error) {
+	out := new(EmptyMessage)
+	err := c.cc.Invoke(ctx, "/proto.AccountService/DeleteEmployee", in, out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *accountServiceClient) GetEmployee(ctx context.Context, in *GetEmployeeRequest, opts ...grpc.CallOption) (*Employee, error) {
+	out := new(Employee)
+	err := c.cc.Invoke(ctx, "/proto.AccountService/GetEmployee", in, out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
 // AccountServiceServer is the server API for AccountService service.
 type AccountServiceServer interface {
 	SayHello(context.Context, *PingMessage) (*PingMessage, error)
 	SayHellogw(context.Context, *PingMessage) (*PingMessage, error)
 	CreateBankEmployee(context.Context, *CreateEmployeeRequest) (*Employee, error)
+	DeleteEmployee(context.Context, *EmployeeIdRequest) (*EmptyMessage, error)
+	GetEmployee(context.Context, *GetEmployeeRequest) (*Employee, error)
 }
 
 // UnimplementedAccountServiceServer can be embedded to have forward compatible implementations.
@@ -301,6 +449,12 @@ func (*UnimplementedAccountServiceServer) SayHellogw(ctx context.Context, req *P
 }
 func (*UnimplementedAccountServiceServer) CreateBankEmployee(ctx context.Context, req *CreateEmployeeRequest) (*Employee, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method CreateBankEmployee not implemented")
+}
+func (*UnimplementedAccountServiceServer) DeleteEmployee(ctx context.Context, req *EmployeeIdRequest) (*EmptyMessage, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method DeleteEmployee not implemented")
+}
+func (*UnimplementedAccountServiceServer) GetEmployee(ctx context.Context, req *GetEmployeeRequest) (*Employee, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method GetEmployee not implemented")
 }
 
 func RegisterAccountServiceServer(s *grpc.Server, srv AccountServiceServer) {
@@ -361,6 +515,42 @@ func _AccountService_CreateBankEmployee_Handler(srv interface{}, ctx context.Con
 	return interceptor(ctx, in, info, handler)
 }
 
+func _AccountService_DeleteEmployee_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(EmployeeIdRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(AccountServiceServer).DeleteEmployee(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: "/proto.AccountService/DeleteEmployee",
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(AccountServiceServer).DeleteEmployee(ctx, req.(*EmployeeIdRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _AccountService_GetEmployee_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(GetEmployeeRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(AccountServiceServer).GetEmployee(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: "/proto.AccountService/GetEmployee",
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(AccountServiceServer).GetEmployee(ctx, req.(*GetEmployeeRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
 var _AccountService_serviceDesc = grpc.ServiceDesc{
 	ServiceName: "proto.AccountService",
 	HandlerType: (*AccountServiceServer)(nil),
@@ -376,6 +566,14 @@ var _AccountService_serviceDesc = grpc.ServiceDesc{
 		{
 			MethodName: "CreateBankEmployee",
 			Handler:    _AccountService_CreateBankEmployee_Handler,
+		},
+		{
+			MethodName: "DeleteEmployee",
+			Handler:    _AccountService_DeleteEmployee_Handler,
+		},
+		{
+			MethodName: "GetEmployee",
+			Handler:    _AccountService_GetEmployee_Handler,
 		},
 	},
 	Streams:  []grpc.StreamDesc{},
